[[change]] Icons für das Öffnen der XML-Datei und des Vorschaufensters geändert

--- a/html/help.html
+++ b/html/help.html
@@ -425,7 +425,7 @@ nothing added to commit but untracked files present (use "git add" to track)</pr
 
         <li>mit dem Icon <img src="../img/win/preview.svg" width="30" height="30" alt=""> können Sie sich das Kurz-Gefasst der Datei anzeigen lassen, und zwar in der Form, in der es in den Suchergebnissen von <a href="https://www.zdl.org/">zdl.org</a> erscheint;</li>
 
-        <li>mit dem Icon <img src="../img/win/open-file.svg" width="30" height="30" alt=""> können Sie die Datei im Standard-XML-Editor Ihres Betriebssystems öffnen.</li>
+        <li>mit dem Icon <img src="../img/win/xml.svg" width="30" height="30" alt=""> können Sie die Datei im Standard-XML-Editor Ihres Betriebssystems öffnen.</li>
       </ul>
 
       <h1><span>Vorschaufenster</span></h1>
@@ -481,11 +481,11 @@ nothing added to commit but untracked files present (use "git add" to track)</pr
 
       <p>Die Hinweise beziehen sich – natürlich – immer auf eine bestimmte <b>XML-Datei</b>. Der Name der XML-Datei, auf die sich ein Hinweis bezieht, bleibt am oberen Rand der Ansicht sichtbar. Neben dem Dateinamen finden Sie drei <b>Icons</b>:</p>
 
-      <p class="indent-icon"><img src="../img/win/xml.svg" width="30" height="30" alt="">Das Icon schickt den XML-Code der Datei an ein neues Programmfenster. In diesem wird die <b>Vorschau</b> auf zdl.org aufgerufen (<a href="#xml-vorschaufenster">mehr zum Vorschaufenster</a>).</p>
+      <p class="indent-icon"><img src="../img/win/preview.svg" width="30" height="30" alt="">Das Icon schickt den XML-Code der Datei an ein neues Programmfenster. In diesem wird die <b>Vorschau</b> auf zdl.org aufgerufen (<a href="#xml-vorschaufenster">mehr zum Vorschaufenster</a>).</p>
 
       <p class="indent-icon"><img src="../img/win/lemmas.svg" width="30" height="30" alt="">Das Icon öffnet ein Popup-Fenster, in dem die <b>Lemmata</b> aufgelistet werden, die in der XML-Datei beschrieben werden. Enthält die Datei einen Wortfeldartikel, werden die Wörter des Wortfeldes aufgelistet.</p>
 
-      <p class="indent-icon"><img src="../img/win/open-file.svg" width="30" height="30" alt="">Das Icon öffnet die Datei im Standard-XML-<b>Editor</b> des Betriebsystems.</p>
+      <p class="indent-icon"><img src="../img/win/xml.svg" width="30" height="30" alt="">Das Icon öffnet die Datei im Standard-XML-<b>Editor</b> des Betriebsystems.</p>
 
       <h1><span>Hinweistypen</span></h1>
 
@@ -896,9 +896,9 @@ nothing added to commit but untracked files present (use "git add" to track)</pr
 
           <p>Oben im Artikelblock steht der Name der XML-Datei, daneben finden Sie drei Icons:</p>
 
-          <p class="indent-icon"><img src="../img/win/xml.svg" width="30" height="30" alt="">Öffnet die XML-Datei im <a href="#xml-vorschaufenster">Vorschaufenster</a></p>
+          <p class="indent-icon"><img src="../img/win/preview.svg" width="30" height="30" alt="">Öffnet die XML-Datei im <a href="#xml-vorschaufenster">Vorschaufenster</a></p>
 
-          <p class="indent-icon"><img src="../img/win/open-file.svg" width="30" height="30" alt="">Öffnet die XML-Datei im Standard-XML-Editor Ihres Betriebssystems</p>
+          <p class="indent-icon"><img src="../img/win/xml.svg" width="30" height="30" alt="">Öffnet die XML-Datei im Standard-XML-Editor Ihres Betriebssystems</p>
 
           <p class="indent-icon"><img src="../img/win/close.svg" width="30" height="30" alt="">Entfernt den Artikelblock aus der Modulierung</p>
 
@@ -1391,7 +1391,7 @@ $ git push</pre>
 
       <p class="indent-icon"><img src="../img/win/preview.svg" width="30" height="30" alt="">Zeigt das Kurz-Gefasst in der gerenderten HTML-Fassung an</p>
 
-      <p class="indent-icon"><img src="../img/win/open-file.svg" width="30" height="30" alt="">Öffnet die XML-Datei im Standard-XML-Editor des Betriebssystems</p>
+      <p class="indent-icon"><img src="../img/win/xml.svg" width="30" height="30" alt="">Öffnet die XML-Datei im Standard-XML-Editor des Betriebssystems</p>
 
       <h1><span>Hilfe-Menü</span></h1>
 
