--- a/win.html
+++ b/win.html
@@ -489,7 +489,7 @@
             ><img src="img/win/preview.svg" width="30" height="30" alt=""
           ></a
           ><a href="#" id="tags-open-file" class="icon" title="Datei im Editor öffnen"
-            ><img src="img/win/open-file.svg" width="30" height="30" alt=""
+            ><img src="img/win/xml.svg" width="30" height="30" alt=""
           ></a
         ></h2>
         <code id="tags-code"></code>
