[[change]] Typos im Handbuch korrigiert

--- a/html/help.html
+++ b/html/help.html
@@ -71,7 +71,7 @@
 
       <h1><span>Filterleiste</span></h1>
 
-      <p id="allgemeines-filterleiste">Die Filterleiste kann über den Button im Fensterkopf oder auch mit dem Tastaturkürzel <kbd>Strg</kbd>&nbsp;+ <kbd>Umsch</kbd>&nbsp;+ <kbd>F</kbd> geöffnet <abbr title="beziehungsweise">bzw.</abbr> geschlossen werden. Der Inhalt der Filterleiste passte sich an die aktuelle Ansicht an. Filter, die für eine Ansicht nicht relevant sind, werden ausgeblendet. Die Auswahl der Filter wird beim Beenden der App gespeichert und beim Start wiederhergestellt.</p>
+      <p id="allgemeines-filterleiste">Die Filterleiste kann über den Button im Fensterkopf oder auch mit dem Tastaturkürzel <kbd>Strg</kbd>&nbsp;+ <kbd>Umsch</kbd>&nbsp;+ <kbd>F</kbd> geöffnet <abbr title="beziehungsweise">bzw.</abbr> geschlossen werden. Der Inhalt der Filterleiste passt sich an die aktuelle Ansicht an. Filter, die für eine Ansicht nicht relevant sind, werden ausgeblendet. Die Auswahl der Filter wird beim Beenden der App gespeichert und beim Start wiederhergestellt.</p>
 
       <p>Die <b>Funktion <i>zurücksetzen</i></b> im Kopf der Filterleiste setzt zwar alle Filter auf ihren Standardwert zurück. Es werden aber nur diejenigen Filter geändert, die in der aktuellen Ansicht sichtbar sind.</p>
 
