--- a/html/about.html
+++ b/html/about.html
@@ -34,7 +34,7 @@
       <table>
         <tr>
           <!-- #copyright is updated by install/build-release.sh -->
-          <td colspan="2"><i>© <span id="copyright">2022</span>, Akademie der Wissenschaften zu Göttingen</i></td>
+          <td colspan="2"><i>© <span id="copyright">2022–2023</span>, Akademie der Wissenschaften zu Göttingen</i></td>
         </tr>
         <tr class="license">
           <th>Autor</th>
