[[change]] in der Überprüfen-Sektion der Clusterei werden Cluster, die in der Übersicht auf zdl.org ausgeblendet werden, nun ausgegraut dargestellt

--- a/html/help.html
+++ b/html/help.html
@@ -959,6 +959,8 @@ nothing added to commit but untracked files present (use "git add" to track)</pr
 
       <p>Mitunter werden Sie auf <b>rot umrandete Cluster</b> stoßen, bei denen Sie keine visuelle Differenz zu einem bereits zuvor bestehenden Cluster erkennen können. Dies liegt daran, dass der Unterschied sehr subtiler Natur ist. In einem solchen Fall hat sich nämlich die Anzahl der Clusterpunkte geändert, mit deren Hilfe die Lemmata im Cluster gewichtet und sortiert werden. Die Änderung hatte dann aber einen so geringen Umfang, dass sie für die Visualisierung des Clusters keine Rolle spielte.</p>
 
+      <p>Sind <b>Cluster ausgegraut</b> werden diese in der <a href="https://www.zdl.org/wb/wortgeschichten/">Artikelübersicht auf zdl.org</a> nicht angezeigt. Die Lemmata des ausgegrauten Clusterzentrums tauchen in solchen Fällen alle mindestens einmal in bereits weiter oben gedruckten Clustern auf. Cluster werden nur ausgegraut, wenn <em>kein</em> Autor*innen-Filter eingestellt ist, wenn also alle Cluster zu einem Themenfeld in der Anzeige sichtbar sind.</p>
+
       <h1><span>Vorschau berechnen</span></h1>
 
       <p id="clusterei-vorschau">Normalerweise arbeitet die Clusterei mit den WGd-Verweisclustern, wie sie in der aktuellen Version der Datei <a href="#allgemeines-artikelJSON">Artikel.json</a> zu finden sind. Dazu wird die Artikel.json aus dem <a href="#git-dateien">Repository</a> eingelesen. Die in ihr zu findenden Cluster werden dann für die Darstellung in der Clusterei genutzt.</p>
