[[change]] die App kann nun mehrere CLI-Kommandos in einem Zuge abarbeiten

--- a/win.html
+++ b/win.html
@@ -28,6 +28,7 @@
 
     <script src="js/win/artikel.js"></script>
     <script src="js/win/bars.js"></script>
+    <script src="js/win/cli.js"></script>
     <script src="js/win/clustersCheck.js"></script>
     <script src="js/win/clustersComp.js"></script>
     <script src="js/win/clustersMod.js"></script>
