[[fix]] unter macOS gab es keinen Weg das Modalfenster "Hilfe > Über QS" zu schließen; nun kann es mit Escape geschlossen werden

--- a/html/about.html
+++ b/html/about.html
@@ -18,6 +18,7 @@
 
     <script src="../js/html/about.js"></script>
     <script src="../js/html/aboutInit.js"></script>
+    <script src="../js/html/keyboard.js"></script>
   </head>
   <body>
     <!-- ABOUT -->
