--- a/html/help.html
+++ b/html/help.html
@@ -1423,9 +1423,9 @@ $ git push</pre>
         </li>
       </ol>
 
-      <p><i>Für Techniker*innen zur Evaluation:</i> <i>QS</i> liefert ein <b>Node-Script</b> mit, mit dessen Hilfe man die Artikel.json in menschenlesbares JSON verwandeln kann. Die Datei ist im Original <a href="https://www.zdl.org/wb/wgd/api#Artikeldaten">stark größenoptimiert</a>, weswegen viele Werte nur Indizes sind, die auf ein Objekt namens <code>values</code> zeigen. Das Script erzeugt eine Datei mit Einrückungen, in der die Indizes durch die tatsächlichen Werte ersetzt wurden. Es liegt im Installationsordner von <i>QS</i> im Unterordner <code>resources</code>:</p>
+      <p><i>Für Techniker*innen zur Evaluation:</i> <i>QS</i> liefert ein <b>Node-Script</b> mit, mit dessen Hilfe man die Artikel.json in menschenlesbares JSON verwandeln kann. Die Datei ist im Original <a href="https://www.zdl.org/wb/wgd/api#Artikeldaten">stark größenoptimiert</a>, weswegen viele Werte nur Indizes sind, die auf ein Objekt namens <code>values</code> zeigen. Das Script erzeugt eine Datei mit Einrückungen, in der die Indizes durch die tatsächlichen Werte ersetzt wurden. Es liegt im Installationsordner von <i>QS</i> im Unterordner <code>resources</code>. Benutzung:</p>
 
-      <pre>$ node hrArtikel.js /PFAD/ZUM/INSTALLATIONSORDNER/resources/Artikel.json</pre>
+      <pre>$ node hrArtikel.js /PFAD/ZUM/REPOSITORY/resources/Artikel.json</pre>
 
       <p>Die Output-Datei wird in dem Ordner erzeugt, in dem die Artikel.json liegt.</p>
 
