--- a/win.html
+++ b/win.html
@@ -435,6 +435,14 @@
                 ><a href="#" id="prefs-zeitstrahl-open" class="icon" title="Datei auswählen"><img src="img/win/open-file.svg" width="30" height="30" alt=""></a
                 ><a href="#" id="prefs-zeitstrahl-remove" class="icon" title="Datei entkoppeln"><img src="img/win/delete.svg" width="30" height="30" alt=""></a
               ></p>
+              <h2>ZDL-Repository<a href="#einstellungen-datenZDL" id="prefs-help-data-zdl" class="icon"
+                ><img src="img/win/help.svg" width="24" height="24" alt=""
+              ></a></h2>
+              <p
+                ><input type="text" value="" placeholder="Pfad zum ZDL-Repository" id="prefs-zdl" readonly tabindex="-1"
+                ><a href="#" id="prefs-zdl-open" class="icon" title="Ordner auswählen"><img src="img/win/open-file.svg" width="30" height="30" alt=""></a
+                ><a href="#" id="prefs-zdl-remove" class="icon" title="Ordner entkoppeln"><img src="img/win/delete.svg" width="30" height="30" alt=""></a
+              ></p>
               <h2>Einstellungsdaten<a href="#einstellungen-datenExport" id="prefs-help-data" class="icon"
                 ><img src="img/win/help.svg" width="24" height="24" alt=""
               ></a></h2>
